--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -23,7 +23,8 @@
   padding-top: 2%;
   padding-bottom: 2%;
 }
-error{
+
+.error{
   color: red;
      margin-top: 0.5rem;
      margin-bottom: 0rem;
